src/App.css
html {
  /* background: url(https://img.myloview.com/posters/old-paper-background-old-crumpled-paper-texture-vintage-retro-newspaper-empty-blank-space-page-with-grunge-stain-line-pattern-400-211347626.jpg) no-repeat center fixed; */
  background-color: white;
  background-size: cover;
  margin: 0;
}



/* <img itemprop="contentUrl" class="view_img" id="vimg" data-height="517" alt="untitled, paper, old, texture, parchment, background, antique, HD wallpaper" src="" height="517"> */

body {
  /* padding-top: 58px;
  margin-top: 0;
  margin-left: 0;
  margin-right: 0; */
  justify-content: center;
  margin: 0;
}

p {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-size: 1.2em;
  font-weight: medium;
}

h1, h2, h3, h4, h5, h6 {
  font-family: sans-serif;
}

a {
  color: black;
  font-family: sans-serif;
  font-size: 24px;
  text-decoration: none;
}

button {
  font-size: 1em;
  font-family: Georgia, 'Times New Roman', Times, serif;
  margin-right: 5px;
  border-radius: 50px;
  text-align: center;
}

.nav {
  /* position: fixed; */
  /* display: block; */
  background-color: rgb(255, 255, 255);
  background-size: cover;
  width: 100%;
  top: 0;
  margin: 0 10px 10px 0;
  /* justify-content: center; */
}
  h1 {
    font-family: "OldEnglish";
    font-size: 60px;
  }

  .left-nav {
    float:left;
    padding-left:5%;
    padding-right:5%;
    width: 15%;
  }

  .mid-nav {
    float:left;
    padding-left: 5%;
    padding-right: 5%;
    width: 15%;
  }

  .right-nav {
    float:left; 
    padding-left:5%;
    padding-right: 5%;
    width: 15%;
  }

  .end-nav {
    float: left;
    padding-left: 5%;
    padding-right: 5%;
    width: 15%;
  }

  
  .homepage-div {
    display: flex;
    padding-top: 5%;
  }
  
  .top-books {
    display: flexbox;
  }
  
  .book-card {
    background-size: cover;
    display:flex;
    border-radius: 4px;
    margin:2%;
  }
.book-img {
  float: left;
  width: 50%;
}

.book-abt{
  padding-top: 5%;
  padding-left: 5%;
  padding-right: 5%;
  float: right;
  max-width: 30%;
  text-align: center;
}

.top-stories {
  display: flex;
  flex-wrap: wrap;
  padding-left: 5%;
  padding-right: 5%;
  justify-content: center;
}

.story-card {
  width: 25%;
  margin:2%;
  border: 2px solid black;
  border-radius: 4px;
  height: 700px;
  overflow-y: auto;
}
 .story-card::-webkit-scrollbar {
   display: hidden;
 }

.story-c-image {
  max-width: 100%;
  height: auto;
}

.home-left {
  float: left;
  width: 50%;
  align-items: center;
  vertical-align: middle;
  margin: 0% 10% 10% 0%;
}

.home-right {
  float: right bottom;
  width: 50%;
  align-items: center;
  vertical-align: middle;
}

img {
  height: 400px;
  vertical-align: middle;
}

.fake-news-img {
  width: 600px;
}


.App {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.fake-news {
  padding: 5%;
}

